; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/extr_apdbg.c_read_mem.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/extr_apdbg.c_read_mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifreq = type { i32 }
%struct.zdap_ioctl = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @read_mem(i32 %0, %struct.ifreq* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.ifreq*, align 8
  %6 = alloca %struct.zdap_ioctl*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.ifreq* %1, %struct.ifreq** %5, align 8
  store %struct.zdap_ioctl* null, %struct.zdap_ioctl** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.ifreq*, %struct.ifreq** %5, align 8
  %10 = call i32 @set_ioctl(i32 %8, %struct.ifreq* %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %14

13:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %14

14:                                               ; preds = %13, %12
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i32 @set_ioctl(i32, %struct.ifreq*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
